plugins/kotlin/idea/tests/testData/checker/diagnosticsMessage/lateinitOfATypeWithNullableUpperBound.kt
// FIR_IDENTICAL

class C<V>() {
    <error descr="[INAPPLICABLE_LATEINIT_MODIFIER]">lateinit</error> var item: V
}
